--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -64,4 +64,4 @@ jobs:
       if: steps.commit.outputs.push == 'true'
       uses: ad-m/github-push-action@master
       with:
-         github_token: ${{ secrets.GITHUB_TOKEN }}
+         github_token: ${{ secrets.GHP_TOKEN }}
