--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   build:
@@ -65,3 +65,4 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
          github_token: ${{ secrets.GHP_TOKEN }}
+         branch: ${{ github.ref }}
